Closed Bug 1136576 Opened 10 years ago Closed 10 years ago

All data could potentially be incorrectly evicted

Categories

(Core :: Audio/Video, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox37 --- fixed
firefox38 --- fixed
firefox39 --- fixed

People

(Reporter: jya, Assigned: jya)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When we evict data, we attempt to align all sourcebuffers so they have the same start. It incorrectly align all source buffers to the start of the one we currently adding data to rather than the one we are currently playing. "Luckily" due to another bug in EvictBefore, the operation is usually a no-op.
Do not align sourcebuffers to the one we're currently adding to, but the currently playing one.
Attachment #8569023 - Flags: review?(cajbir.bugzilla)
Assignee: nobody → jyavenard
Status: NEW → ASSIGNED
Attachment #8569023 - Flags: review?(cajbir.bugzilla) → review+
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
need beta uplift
Flags: needinfo?(giles)
Comment on attachment 8569023 [details] [diff] [review] Properly align source buffer starts with current decoder Approval Request Comment [Feature/regressing bug #]: MSE [User impact if declined]: Longer rebuffering pauses playing MSE video. [Describe test coverage new/current, TreeHerder]: Landed on m-c. [Risks and why]: Risk is low. This is an isolated MSE-specific change. [String/UUID change made/needed]: None.
Flags: needinfo?(giles)
Attachment #8569023 - Flags: approval-mozilla-beta?
Attachment #8569023 - Flags: approval-mozilla-aurora?
Attachment #8569023 - Flags: approval-mozilla-beta?
Attachment #8569023 - Flags: approval-mozilla-beta+
Attachment #8569023 - Flags: approval-mozilla-aurora?
Attachment #8569023 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: