Bug 1136576: Properly align source buffer starts with current decoder. r=cajbir